fix: fixed gap navbar menu

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -34,7 +34,7 @@ header {
 
   .navbar-menu {
     display: flex;
-    gap: 10px;
+    gap: 15px;
 
     .menu-tablet {
       display: none;
